module/core/former/tests/inc/former_enum_tests/compile_fail/mod.rs
// Declare compile-fail test modules for enum named variants.

mod struct_zero_default_error;
mod struct_zero_subform_scalar_error;

// qqq : Add declarations for other compile-fail tests as they are implemented.